rbd: flush dcache after zeroing page data (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4778,6 +4778,7 @@
 	patches.ceph/0005-rbd-send-snapshot-context-with-writes
 	patches.ceph/0006-rbd-use-min_t-to-fix-comparison-of-distinct-pointer-types-warning
 	patches.ceph/0007-rbd-drop-original-request-earlier-for-existence-check
+	patches.ceph/0008-rbd-flush-dcache-after-zeroing-page-data
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
