--- a/series.conf
+++ b/series.conf
@@ -4784,6 +4784,7 @@
 	patches.ceph/0011-rbd-set-removing-flag-while-holding-list-lock
 	patches.ceph/0012-rbd-protect-against-concurrent-unmaps
 	patches.ceph/0013-rbd-don-t-hold-ctl_mutex-to-get-put-device
+	patches.ceph/0014-rbd-use-rwsem-to-protect-header-updates
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
