block: replace strict_strtoul() with kstrtoul() (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4798,6 +4798,7 @@
 	patches.ceph/0024-rbd-fix-use-after-free-of-rbd_dev-disk
 	patches.ceph/0025-rbd-ignore-unmapped-snapshots-that-no-longer-exist
 	patches.ceph/0026-rbd-fix-error-handling-from-rbd_snap_name
+	patches.ceph/0027-block-replace-strict_strtoul-with-kstrtoul
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
