rbd: complete notifies before cleaning up osd_client and rbd_dev (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4793,6 +4793,7 @@
 	patches.ceph/0021-rbd-fix-null-dereference-in-dout
 	patches.ceph/libceph-add-function-to-ensure-notifies-are-complete
 	patches.ceph/ceph-remove-bogus-extern
+	patches.ceph/0022-rbd-complete-notifies-before-cleaning-up-osd_client-and-rbd_dev
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
