rbd: Use min_t() to fix comparison of distinct pointer types warning (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4776,6 +4776,7 @@
 	patches.ceph/0003-rbd-use-the-correct-length-for-format-2-object-names
 	patches.ceph/0004-rbd-fetch-object-order-before-using-it
 	patches.ceph/0005-rbd-send-snapshot-context-with-writes
+	patches.ceph/0006-rbd-use-min_t-to-fix-comparison-of-distinct-pointer-types-warning
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
