rbd: use reference counts for image requests (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4800,6 +4800,7 @@
 	patches.ceph/0026-rbd-fix-error-handling-from-rbd_snap_name
 	patches.ceph/0027-block-replace-strict_strtoul-with-kstrtoul
 	patches.ceph/rbd-fix-error-paths-in-rbd_img_request_fill
+	patches.ceph/rbd-use-reference-counts-for-image-requests
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
