--- a/series.conf
+++ b/series.conf
@@ -4795,6 +4795,7 @@
 	patches.ceph/ceph-remove-bogus-extern
 	patches.ceph/0022-rbd-complete-notifies-before-cleaning-up-osd_client-and-rbd_dev
 	patches.ceph/0023-rbd-make-rbd_obj_notify_ack-synchronous
+	patches.ceph/0024-rbd-fix-use-after-free-of-rbd_dev-disk
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
