be2net: avoid flashing SH-B0 UFI image on SH-P2 chip (bnc#908322 FATE#317535).

--- a/series.conf
+++ b/series.conf
@@ -13848,6 +13848,7 @@
 	patches.drivers/be2net-0228-net-Check-for-presence-of-IFLA_AF_SPEC.patch
 	patches.drivers/be2net-0229-be2net-Change-driver-version-to-indicate-a-SUSE-back.patch
 	patches.drivers/be2net-refactor-code-that-checks-flash-file-compatib.patch
+	patches.drivers/be2net-avoid-flashing-SH-B0-UFI-image-on-SH-P2-chip.patch
 
 	# qlge SP4 update (bsc#909361 FATE#317547)
 	patches.drivers/qlge-0001-qlge-fix-an-vs-bug.patch
