--- a/series.conf
+++ b/series.conf
@@ -13847,6 +13847,7 @@
 	patches.drivers/be2net-0227-net-Validate-IFLA_BRIDGE_MODE-attribute-length.patch
 	patches.drivers/be2net-0228-net-Check-for-presence-of-IFLA_AF_SPEC.patch
 	patches.drivers/be2net-0229-be2net-Change-driver-version-to-indicate-a-SUSE-back.patch
+	patches.drivers/be2net-refactor-code-that-checks-flash-file-compatib.patch
 
 	# qlge SP4 update (bsc#909361 FATE#317547)
 	patches.drivers/qlge-0001-qlge-fix-an-vs-bug.patch
