--- a/series.conf
+++ b/series.conf
@@ -5063,6 +5063,7 @@
 	patches.fixes/0002-NFSv4.1-Don-t-decode-skipped-layoutgets.patch
 	patches.fixes/0001-NFS-don-t-use-STABLE-writes-during-writeback.patch
 	patches.fixes/0001-nfsd-fix-EXDEV-checking-in-rename.patch
+	patches.fixes/nfs-prime-decache-requires-fh.patch
 
 	########################################################
 	# Netfilter
