don't do blind d_drop() in nfs_prime_dcache() (bnc#908069 bnc#896484).

--- a/series.conf
+++ b/series.conf
@@ -5064,6 +5064,7 @@
 	patches.fixes/0001-NFS-don-t-use-STABLE-writes-during-writeback.patch
 	patches.fixes/0001-nfsd-fix-EXDEV-checking-in-rename.patch
 	patches.fixes/nfs-prime-decache-requires-fh.patch
+	patches.fixes/0001-don-t-do-blind-d_drop-in-nfs_prime_dcache.patch
 
 	########################################################
 	# Netfilter
