NFSv4: Fix another reboot recovery race (bnc#916982).

--- a/series.conf
+++ b/series.conf
@@ -5065,6 +5065,7 @@
 	patches.fixes/0001-nfsd-fix-EXDEV-checking-in-rename.patch
 	patches.fixes/nfs-prime-decache-requires-fh.patch
 	patches.fixes/0001-don-t-do-blind-d_drop-in-nfs_prime_dcache.patch
+	patches.fixes/0001-NFSv4-Fix-another-reboot-recovery-race.patch
 
 	########################################################
 	# Netfilter
