--- a/series.conf
+++ b/series.conf
@@ -12527,6 +12527,7 @@
 	patches.fixes/infiniband-ipoib-sanitize-neighbour-handling-in-ipoi.patch
 	patches.fixes/ipoib-convert-over-to-dev_lookup_neigh_skb.patch
 	patches.fixes/ipoib-need-to-do-dst_neigh_lookup_skb-outside-of-pri.patch
+	patches.fixes/ipoib-use-a-private-hash-table-for-path-lookup-in-xm.patch
 
 	# bsc#912171
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
