ipoib: Need to do dst_neigh_lookup_skb() outside of priv->lock (bsc#907196).

--- a/series.conf
+++ b/series.conf
@@ -12526,6 +12526,7 @@
 	patches.fixes/netlink-add-privilege-check-of-socket-opener.patch
 	patches.fixes/infiniband-ipoib-sanitize-neighbour-handling-in-ipoi.patch
 	patches.fixes/ipoib-convert-over-to-dev_lookup_neigh_skb.patch
+	patches.fixes/ipoib-need-to-do-dst_neigh_lookup_skb-outside-of-pri.patch
 
 	# bsc#912171
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
