infiniband: ipoib: Sanitize neighbour handling in ipoib_main.c (bsc#907196).

--- a/series.conf
+++ b/series.conf
@@ -12524,6 +12524,7 @@
 	patches.fixes/net-sctp-fix-panic-on-duplicate-ASCONF-chunks.patch
 	patches.fixes/net-sctp-fix-remote-memory-pressure-from-excessive-q.patch
 	patches.fixes/netlink-add-privilege-check-of-socket-opener.patch
+	patches.fixes/infiniband-ipoib-sanitize-neighbour-handling-in-ipoi.patch
 
 	# bsc#912171
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
