ipoib: Convert over to dev_lookup_neigh_skb() (bsc#907196).

--- a/series.conf
+++ b/series.conf
@@ -12525,6 +12525,7 @@
 	patches.fixes/net-sctp-fix-remote-memory-pressure-from-excessive-q.patch
 	patches.fixes/netlink-add-privilege-check-of-socket-opener.patch
 	patches.fixes/infiniband-ipoib-sanitize-neighbour-handling-in-ipoi.patch
+	patches.fixes/ipoib-convert-over-to-dev_lookup_neigh_skb.patch
 
 	# bsc#912171
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
