Setting rbd and libceph as supported drivers (bsc#917884)

--- a/supported.conf
+++ b/supported.conf
@@ -256,7 +256,7 @@
 -		drivers/block/paride/*
 		drivers/block/pktcdvd
 		drivers/block/ps3disk				# Sony PS3 disk
--		drivers/block/rbd				# built as an external KMP
+		drivers/block/rbd				# rados block device
 -		drivers/block/swim3				# PowerMac SWIM3 floppy controller
 		drivers/block/sx8				# Promise SATA SX8 block driver
 		drivers/block/umem				# Micro Memory(tm) PCI memory board block driver
@@ -2063,7 +2063,7 @@
 		net/can/can
 		net/can/can-bcm
 		net/can/can-raw
--		net/ceph/libceph				# built as an external KMP
+		net/ceph/libceph				# Ceph: support for rbd
 		net/core/pktgen					# Packet Generator tool
 		net/dcb/dcbnl
 -		net/dccp/*
