crush: strip firstn conditionals out of crush_choose, rename (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4835,6 +4835,7 @@
 	patches.ceph/0026-crush-return-crush_item_undef-for-failed-placements-with-indep
 	patches.ceph/0027-crush-use-breadth-first-search-for-indep-mode
 	patches.ceph/0028-crush-add-note-about-r-in-recursive-choose
+	patches.ceph/0029-crush-strip-firstn-conditionals-out-of-crush_choose-rename
 	# CVE-2014-6416
 
 	########################################################
