net: 8021q/bluetooth/bridge/can/ceph: Remove extern from function prototypes (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4811,6 +4811,7 @@
 	patches.ceph/libceph-call-r_unsafe_callback-when-unsafe-reply-is-received
 	patches.ceph/libceph-create_singlethread_workqueue-doesn-t-return-err_ptrs
 	patches.ceph/libceph-ceph_osd_flag_-enum-update
+	patches.ceph/0001-net-8021q-bluetooth-bridge-can-ceph-remove-extern-from-function-prototypes
 	# this next one needs updating
 	# CVE-2014-6416
 
