libceph: do not hard code max auth ticket len (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4866,6 +4866,7 @@
 	# CVE-2014-6416
 	patches.ceph/libceph-gracefully-handle-large-reply-messages-from-the-mon
 	patches.ceph/libceph-add-process_one_ticket-helper
+	patches.ceph/libceph-do-not-hard-code-max-auth-ticket-len
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
