libceph: replace ceph_calc_ceph_pg() with ceph_oloc_oid_to_pg() (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4855,6 +4855,7 @@
 	patches.ceph/0046-libceph-start-using-oloc-abstraction
 	patches.ceph/0047-libceph-rename-max_obj_name_size-to-ceph_max_oid_name_len
 	patches.ceph/0048-libceph-introduce-and-start-using-oid-abstraction
+	patches.ceph/0049-libceph-replace-ceph_calc_ceph_pg-with-ceph_oloc_oid_to_pg
 	# CVE-2014-6416
 
 	########################################################
