libceph: dout() is missing a newline (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4851,6 +4851,7 @@
 	patches.ceph/0042-libceph-rename-front-to-front_len-in-get_reply
 	patches.ceph/0043-libceph-fix-preallocation-check-in-get_reply
 	patches.ceph/0044-libceph-add-ceph_kv-malloc-free-and-switch-to-them
+	patches.ceph/0045-libceph-dout-is-missing-a-newline
 	# CVE-2014-6416
 
 	########################################################
