--- a/series.conf
+++ b/series.conf
@@ -4861,6 +4861,7 @@
 	patches.ceph/0052-libceph-rename-ceph_osd_request-r_-oloc-oid-to-r_base_-oloc-oid
 	patches.ceph/0053-libceph-follow-redirect-replies-from-osds
 	patches.ceph/0055-libceph-fix-error-handling-in-ceph_osdc_init
+	patches.ceph/0056-libceph-factor-out-logic-from-ceph_osdc_start_request
 	# CVE-2014-6416
 
 	########################################################
