libceph: take map_sem for read in handle_reply() (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4862,6 +4862,7 @@
 	patches.ceph/0053-libceph-follow-redirect-replies-from-osds
 	patches.ceph/0055-libceph-fix-error-handling-in-ceph_osdc_init
 	patches.ceph/0056-libceph-factor-out-logic-from-ceph_osdc_start_request
+	patches.ceph/0057-libceph-take-map_sem-for-read-in-handle_reply
 	# CVE-2014-6416
 
 	########################################################
