crush: generalize descend_once (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4842,6 +4842,7 @@
 	patches.ceph/0033-crush-apply-chooseleaf_tries-to-firstn-mode-too
 	patches.ceph/0034-crush-add-set_choose_tries-rule-step
 	patches.ceph/0035-crush-choose_leaf-chooseleaf-throughout
+	patches.ceph/0036-crush-generalize-descend_once
 	# CVE-2014-6416
 
 	########################################################
