--- a/series.conf
+++ b/series.conf
@@ -4839,6 +4839,7 @@
 	patches.ceph/0030-crush-clarify-numrep-vs-endpos
 	patches.ceph/0031-crush-pass-parent-r-value-for-indep-call
 	patches.ceph/0032-crush-new-set_choose_leaf_tries-command
+	patches.ceph/0033-crush-apply-chooseleaf_tries-to-firstn-mode-too
 	# CVE-2014-6416
 
 	########################################################
