--- a/series.conf
+++ b/series.conf
@@ -4853,6 +4853,7 @@
 	patches.ceph/0044-libceph-add-ceph_kv-malloc-free-and-switch-to-them
 	patches.ceph/0045-libceph-dout-is-missing-a-newline
 	patches.ceph/0046-libceph-start-using-oloc-abstraction
+	patches.ceph/0047-libceph-rename-max_obj_name_size-to-ceph_max_oid_name_len
 	# CVE-2014-6416
 
 	########################################################
