libceph: CEPH_OSD_FLAG_* enum update (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4810,6 +4810,7 @@
 	patches.ceph/libceph-fix-safe-completion
 	patches.ceph/libceph-call-r_unsafe_callback-when-unsafe-reply-is-received
 	patches.ceph/libceph-create_singlethread_workqueue-doesn-t-return-err_ptrs
+	patches.ceph/libceph-ceph_osd_flag_-enum-update
 	# this next one needs updating
 	# CVE-2014-6416
 
