rbd: enable extended devt in single-major mode (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4822,6 +4822,7 @@
 	patches.ceph/0013-rbd-add-minor-sysfs-rbd-device-attribute
 	# this next one needs updating
 	patches.ceph/0015-rbd-add-support-for-single-major-device-number-allocation-scheme
+	patches.ceph/0016-rbd-enable-extended-devt-in-single-major-mode
 	# CVE-2014-6416
 
 	########################################################
