--- a/series.conf
+++ b/series.conf
@@ -4812,6 +4812,7 @@
 	patches.ceph/libceph-create_singlethread_workqueue-doesn-t-return-err_ptrs
 	patches.ceph/libceph-ceph_osd_flag_-enum-update
 	patches.ceph/0001-net-8021q-bluetooth-bridge-can-ceph-remove-extern-from-function-prototypes
+	patches.ceph/0006-ceph-add-necessary-clean-up-if-invalid-reply-received-in-handle_reply
 	# this next one needs updating
 	# CVE-2014-6416
 
