--- a/series.conf
+++ b/series.conf
@@ -4818,6 +4818,7 @@
 	patches.ceph/0009-rbd-rbd_device-dev_id-is-an-int-format-it-as-such
 	patches.ceph/0010-rbd-tweak-loaded-message-and-module-description
 	patches.ceph/0011-rbd-refactor-rbd_init-a-bit
+	patches.ceph/0012-rbd-switch-to-ida-for-rbd-id-assignments
 	# this next one needs updating
 	# CVE-2014-6416
 
