--- a/series.conf
+++ b/series.conf
@@ -4846,6 +4846,7 @@
 	patches.ceph/0037-crush-add-set_choose_local_tries-steps
 	patches.ceph/0038-crush-attempts-tries
 	patches.ceph/0039-crush-fix-crush_choose_firstn-comment
+	patches.ceph/0040-libceph-use-ceph_mon_port-when-the-specified-port-is-0
 	# CVE-2014-6416
 
 	########################################################
