crush: factor out (trivial) crush_destroy_rule() (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4828,6 +4828,7 @@
 	patches.ceph/0019-libceph-all-features-fields-must-be-u64
 	patches.ceph/0020-libceph-update-ceph_features-h
 	patches.ceph/0021-crush-pass-weight-vector-size-to-map-function
+	patches.ceph/0022-crush-factor-out-trivial-crush_destroy_rule
 	# CVE-2014-6416
 
 	########################################################
