rbd: rbd_device::dev_id is an int, format it as such (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4815,6 +4815,7 @@
 	patches.ceph/0006-ceph-add-necessary-clean-up-if-invalid-reply-received-in-handle_reply
 	patches.ceph/0007-libceph-block-i-o-when-pause-or-full-osd-map-flags-are-set
 	patches.ceph/0008-libceph-resend-all-writes-after-the-osdmap-loses-the-full-flag
+	patches.ceph/0009-rbd-rbd_device-dev_id-is-an-int-format-it-as-such
 	# this next one needs updating
 	# CVE-2014-6416
 
