libceph: fix safe completion (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4806,6 +4806,10 @@
 	patches.ceph/rbd-use-reference-counts-for-image-requests
 	patches.ceph/rbd-fix-error-recovery-in-rbd_obj_read_sync
 	patches.ceph/rbd-drop-an-unsafe-assertion
+	# v3.12 -> v3.14
+	patches.ceph/libceph-fix-safe-completion
+	# this next one needs updating
+	# CVE-2014-6416
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
