crush: clarify numrep vs endpos (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4836,6 +4836,7 @@
 	patches.ceph/0027-crush-use-breadth-first-search-for-indep-mode
 	patches.ceph/0028-crush-add-note-about-r-in-recursive-choose
 	patches.ceph/0029-crush-strip-firstn-conditionals-out-of-crush_choose-rename
+	patches.ceph/0030-crush-clarify-numrep-vs-endpos
 	# CVE-2014-6416
 
 	########################################################
