crush: pass weight vector size to map function (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4827,6 +4827,7 @@
 	patches.ceph/0018-rbd-tear-down-watch-request-if-rbd_dev_device_setup-fails
 	patches.ceph/0019-libceph-all-features-fields-must-be-u64
 	patches.ceph/0020-libceph-update-ceph_features-h
+	patches.ceph/0021-crush-pass-weight-vector-size-to-map-function
 	# CVE-2014-6416
 
 	########################################################
