rbd: introduce rbd_dev_header_unwatch_sync() and switch to it (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4823,6 +4823,7 @@
 	# this next one needs updating
 	patches.ceph/0015-rbd-add-support-for-single-major-device-number-allocation-scheme
 	patches.ceph/0016-rbd-enable-extended-devt-in-single-major-mode
+	patches.ceph/0017-rbd-introduce-rbd_dev_header_unwatch_sync-and-switch-to-it
 	# CVE-2014-6416
 
 	########################################################
