--- a/series.conf
+++ b/series.conf
@@ -4854,6 +4854,7 @@
 	patches.ceph/0045-libceph-dout-is-missing-a-newline
 	patches.ceph/0046-libceph-start-using-oloc-abstraction
 	patches.ceph/0047-libceph-rename-max_obj_name_size-to-ceph_max_oid_name_len
+	patches.ceph/0048-libceph-introduce-and-start-using-oid-abstraction
 	# CVE-2014-6416
 
 	########################################################
