--- a/series.conf
+++ b/series.conf
@@ -4858,6 +4858,7 @@
 	patches.ceph/0049-libceph-replace-ceph_calc_ceph_pg-with-ceph_oloc_oid_to_pg
 	patches.ceph/0050-libceph-add-ceph_pg_pool_by_id
 	patches.ceph/0051-libceph-follow-read-write-tier-fields-on-osd-request-submission
+	patches.ceph/0052-libceph-rename-ceph_osd_request-r_-oloc-oid-to-r_base_-oloc-oid
 	# CVE-2014-6416
 
 	########################################################
