libceph: start using oloc abstraction (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4852,6 +4852,7 @@
 	patches.ceph/0043-libceph-fix-preallocation-check-in-get_reply
 	patches.ceph/0044-libceph-add-ceph_kv-malloc-free-and-switch-to-them
 	patches.ceph/0045-libceph-dout-is-missing-a-newline
+	patches.ceph/0046-libceph-start-using-oloc-abstraction
 	# CVE-2014-6416
 
 	########################################################
