--- a/series.conf
+++ b/series.conf
@@ -4824,6 +4824,7 @@
 	patches.ceph/0015-rbd-add-support-for-single-major-device-number-allocation-scheme
 	patches.ceph/0016-rbd-enable-extended-devt-in-single-major-mode
 	patches.ceph/0017-rbd-introduce-rbd_dev_header_unwatch_sync-and-switch-to-it
+	patches.ceph/0018-rbd-tear-down-watch-request-if-rbd_dev_device_setup-fails
 	# CVE-2014-6416
 
 	########################################################
