crush: fix crush_choose_firstn comment (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4845,6 +4845,7 @@
 	patches.ceph/0036-crush-generalize-descend_once
 	patches.ceph/0037-crush-add-set_choose_local_tries-steps
 	patches.ceph/0038-crush-attempts-tries
+	patches.ceph/0039-crush-fix-crush_choose_firstn-comment
 	# CVE-2014-6416
 
 	########################################################
