--- a/series.conf
+++ b/series.conf
@@ -4847,6 +4847,7 @@
 	patches.ceph/0038-crush-attempts-tries
 	patches.ceph/0039-crush-fix-crush_choose_firstn-comment
 	patches.ceph/0040-libceph-use-ceph_mon_port-when-the-specified-port-is-0
+	patches.ceph/0041-libceph-rename-ceph_msg-front_max-to-front_alloc_len
 	# CVE-2014-6416
 
 	########################################################
