--- a/series.conf
+++ b/series.conf
@@ -4817,6 +4817,7 @@
 	patches.ceph/0008-libceph-resend-all-writes-after-the-osdmap-loses-the-full-flag
 	patches.ceph/0009-rbd-rbd_device-dev_id-is-an-int-format-it-as-such
 	patches.ceph/0010-rbd-tweak-loaded-message-and-module-description
+	patches.ceph/0011-rbd-refactor-rbd_init-a-bit
 	# this next one needs updating
 	# CVE-2014-6416
 
