libceph: resend all writes after the osdmap loses the full flag (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4814,6 +4814,7 @@
 	patches.ceph/0001-net-8021q-bluetooth-bridge-can-ceph-remove-extern-from-function-prototypes
 	patches.ceph/0006-ceph-add-necessary-clean-up-if-invalid-reply-received-in-handle_reply
 	patches.ceph/0007-libceph-block-i-o-when-pause-or-full-osd-map-flags-are-set
+	patches.ceph/0008-libceph-resend-all-writes-after-the-osdmap-loses-the-full-flag
 	# this next one needs updating
 	# CVE-2014-6416
 
