libceph: gracefully handle large reply messages from the mon (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4864,6 +4864,7 @@
 	patches.ceph/0056-libceph-factor-out-logic-from-ceph_osdc_start_request
 	patches.ceph/0057-libceph-take-map_sem-for-read-in-handle_reply
 	# CVE-2014-6416
+	patches.ceph/libceph-gracefully-handle-large-reply-messages-from-the-mon
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
