--- a/series.conf
+++ b/series.conf
@@ -4833,6 +4833,7 @@
 	patches.ceph/0024-crush-fix-some-comments
 	patches.ceph/0025-crush-eliminate-crush_max_set-result-size-limitation
 	patches.ceph/0026-crush-return-crush_item_undef-for-failed-placements-with-indep
+	patches.ceph/0027-crush-use-breadth-first-search-for-indep-mode
 	# CVE-2014-6416
 
 	########################################################
