--- a/series.conf
+++ b/series.conf
@@ -4808,6 +4808,7 @@
 	patches.ceph/rbd-drop-an-unsafe-assertion
 	# v3.12 -> v3.14
 	patches.ceph/libceph-fix-safe-completion
+	patches.ceph/libceph-call-r_unsafe_callback-when-unsafe-reply-is-received
 	# this next one needs updating
 	# CVE-2014-6416
 
