rbd: add support for single-major device number allocation scheme (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4821,6 +4821,7 @@
 	patches.ceph/0012-rbd-switch-to-ida-for-rbd-id-assignments
 	patches.ceph/0013-rbd-add-minor-sysfs-rbd-device-attribute
 	# this next one needs updating
+	patches.ceph/0015-rbd-add-support-for-single-major-device-number-allocation-scheme
 	# CVE-2014-6416
 
 	########################################################
