libceph: add ceph_kv{malloc,free}() and switch to them (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4850,6 +4850,7 @@
 	patches.ceph/0041-libceph-rename-ceph_msg-front_max-to-front_alloc_len
 	patches.ceph/0042-libceph-rename-front-to-front_len-in-get_reply
 	patches.ceph/0043-libceph-fix-preallocation-check-in-get_reply
+	patches.ceph/0044-libceph-add-ceph_kv-malloc-free-and-switch-to-them
 	# CVE-2014-6416
 
 	########################################################
