rbd: add 'minor' sysfs rbd device attribute (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4819,6 +4819,7 @@
 	patches.ceph/0010-rbd-tweak-loaded-message-and-module-description
 	patches.ceph/0011-rbd-refactor-rbd_init-a-bit
 	patches.ceph/0012-rbd-switch-to-ida-for-rbd-id-assignments
+	patches.ceph/0013-rbd-add-minor-sysfs-rbd-device-attribute
 	# this next one needs updating
 	# CVE-2014-6416
 
