crush: add SET_CHOOSE_TRIES rule step (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4840,6 +4840,7 @@
 	patches.ceph/0031-crush-pass-parent-r-value-for-indep-call
 	patches.ceph/0032-crush-new-set_choose_leaf_tries-command
 	patches.ceph/0033-crush-apply-chooseleaf_tries-to-firstn-mode-too
+	patches.ceph/0034-crush-add-set_choose_tries-rule-step
 	# CVE-2014-6416
 
 	########################################################
