crush: reduce scope of some local variables (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4829,6 +4829,7 @@
 	patches.ceph/0020-libceph-update-ceph_features-h
 	patches.ceph/0021-crush-pass-weight-vector-size-to-map-function
 	patches.ceph/0022-crush-factor-out-trivial-crush_destroy_rule
+	patches.ceph/0023-crush-reduce-scope-of-some-local-variables
 	# CVE-2014-6416
 
 	########################################################
