--- a/series.conf
+++ b/series.conf
@@ -4831,6 +4831,7 @@
 	patches.ceph/0022-crush-factor-out-trivial-crush_destroy_rule
 	patches.ceph/0023-crush-reduce-scope-of-some-local-variables
 	patches.ceph/0024-crush-fix-some-comments
+	patches.ceph/0025-crush-eliminate-crush_max_set-result-size-limitation
 	# CVE-2014-6416
 
 	########################################################
