libceph: block I/O when PAUSE or FULL osd map flags are set (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4813,6 +4813,7 @@
 	patches.ceph/libceph-ceph_osd_flag_-enum-update
 	patches.ceph/0001-net-8021q-bluetooth-bridge-can-ceph-remove-extern-from-function-prototypes
 	patches.ceph/0006-ceph-add-necessary-clean-up-if-invalid-reply-received-in-handle_reply
+	patches.ceph/0007-libceph-block-i-o-when-pause-or-full-osd-map-flags-are-set
 	# this next one needs updating
 	# CVE-2014-6416
 
