libceph: all features fields must be u64 (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4825,6 +4825,7 @@
 	patches.ceph/0016-rbd-enable-extended-devt-in-single-major-mode
 	patches.ceph/0017-rbd-introduce-rbd_dev_header_unwatch_sync-and-switch-to-it
 	patches.ceph/0018-rbd-tear-down-watch-request-if-rbd_dev_device_setup-fails
+	patches.ceph/0019-libceph-all-features-fields-must-be-u64
 	# CVE-2014-6416
 
 	########################################################
