--- a/series.conf
+++ b/series.conf
@@ -4859,6 +4859,7 @@
 	patches.ceph/0050-libceph-add-ceph_pg_pool_by_id
 	patches.ceph/0051-libceph-follow-read-write-tier-fields-on-osd-request-submission
 	patches.ceph/0052-libceph-rename-ceph_osd_request-r_-oloc-oid-to-r_base_-oloc-oid
+	patches.ceph/0053-libceph-follow-redirect-replies-from-osds
 	# CVE-2014-6416
 
 	########################################################
