crush: pass parent r value for indep call (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4837,6 +4837,7 @@
 	patches.ceph/0028-crush-add-note-about-r-in-recursive-choose
 	patches.ceph/0029-crush-strip-firstn-conditionals-out-of-crush_choose-rename
 	patches.ceph/0030-crush-clarify-numrep-vs-endpos
+	patches.ceph/0031-crush-pass-parent-r-value-for-indep-call
 	# CVE-2014-6416
 
 	########################################################
