--- a/series.conf
+++ b/series.conf
@@ -4843,6 +4843,7 @@
 	patches.ceph/0034-crush-add-set_choose_tries-rule-step
 	patches.ceph/0035-crush-choose_leaf-chooseleaf-throughout
 	patches.ceph/0036-crush-generalize-descend_once
+	patches.ceph/0037-crush-add-set_choose_local_tries-steps
 	# CVE-2014-6416
 
 	########################################################
