crush: fix some comments (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4830,6 +4830,7 @@
 	patches.ceph/0021-crush-pass-weight-vector-size-to-map-function
 	patches.ceph/0022-crush-factor-out-trivial-crush_destroy_rule
 	patches.ceph/0023-crush-reduce-scope-of-some-local-variables
+	patches.ceph/0024-crush-fix-some-comments
 	# CVE-2014-6416
 
 	########################################################
