--- a/series.conf
+++ b/series.conf
@@ -4832,6 +4832,7 @@
 	patches.ceph/0023-crush-reduce-scope-of-some-local-variables
 	patches.ceph/0024-crush-fix-some-comments
 	patches.ceph/0025-crush-eliminate-crush_max_set-result-size-limitation
+	patches.ceph/0026-crush-return-crush_item_undef-for-failed-placements-with-indep
 	# CVE-2014-6416
 
 	########################################################
