libceph: follow {read,write}_tier fields on osd request submission (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4857,6 +4857,7 @@
 	patches.ceph/0048-libceph-introduce-and-start-using-oid-abstraction
 	patches.ceph/0049-libceph-replace-ceph_calc_ceph_pg-with-ceph_oloc_oid_to_pg
 	patches.ceph/0050-libceph-add-ceph_pg_pool_by_id
+	patches.ceph/0051-libceph-follow-read-write-tier-fields-on-osd-request-submission
 	# CVE-2014-6416
 
 	########################################################
