--- a/series.conf
+++ b/series.conf
@@ -4844,6 +4844,7 @@
 	patches.ceph/0035-crush-choose_leaf-chooseleaf-throughout
 	patches.ceph/0036-crush-generalize-descend_once
 	patches.ceph/0037-crush-add-set_choose_local_tries-steps
+	patches.ceph/0038-crush-attempts-tries
 	# CVE-2014-6416
 
 	########################################################
