--- a/series.conf
+++ b/series.conf
@@ -4860,6 +4860,7 @@
 	patches.ceph/0051-libceph-follow-read-write-tier-fields-on-osd-request-submission
 	patches.ceph/0052-libceph-rename-ceph_osd_request-r_-oloc-oid-to-r_base_-oloc-oid
 	patches.ceph/0053-libceph-follow-redirect-replies-from-osds
+	patches.ceph/0055-libceph-fix-error-handling-in-ceph_osdc_init
 	# CVE-2014-6416
 
 	########################################################
