libceph: fix preallocation check in get_reply() (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4849,6 +4849,7 @@
 	patches.ceph/0040-libceph-use-ceph_mon_port-when-the-specified-port-is-0
 	patches.ceph/0041-libceph-rename-ceph_msg-front_max-to-front_alloc_len
 	patches.ceph/0042-libceph-rename-front-to-front_len-in-get_reply
+	patches.ceph/0043-libceph-fix-preallocation-check-in-get_reply
 	# CVE-2014-6416
 
 	########################################################
