libceph: create_singlethread_workqueue() doesn't return ERR_PTRs (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4809,6 +4809,7 @@
 	# v3.12 -> v3.14
 	patches.ceph/libceph-fix-safe-completion
 	patches.ceph/libceph-call-r_unsafe_callback-when-unsafe-reply-is-received
+	patches.ceph/libceph-create_singlethread_workqueue-doesn-t-return-err_ptrs
 	# this next one needs updating
 	# CVE-2014-6416
 
