crush: new SET_CHOOSE_LEAF_TRIES command (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4838,6 +4838,7 @@
 	patches.ceph/0029-crush-strip-firstn-conditionals-out-of-crush_choose-rename
 	patches.ceph/0030-crush-clarify-numrep-vs-endpos
 	patches.ceph/0031-crush-pass-parent-r-value-for-indep-call
+	patches.ceph/0032-crush-new-set_choose_leaf_tries-command
 	# CVE-2014-6416
 
 	########################################################
