libceph: update ceph_features.h (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4826,6 +4826,7 @@
 	patches.ceph/0017-rbd-introduce-rbd_dev_header_unwatch_sync-and-switch-to-it
 	patches.ceph/0018-rbd-tear-down-watch-request-if-rbd_dev_device_setup-fails
 	patches.ceph/0019-libceph-all-features-fields-must-be-u64
+	patches.ceph/0020-libceph-update-ceph_features-h
 	# CVE-2014-6416
 
 	########################################################
