crush: add note about r in recursive choose (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4834,6 +4834,7 @@
 	patches.ceph/0025-crush-eliminate-crush_max_set-result-size-limitation
 	patches.ceph/0026-crush-return-crush_item_undef-for-failed-placements-with-indep
 	patches.ceph/0027-crush-use-breadth-first-search-for-indep-mode
+	patches.ceph/0028-crush-add-note-about-r-in-recursive-choose
 	# CVE-2014-6416
 
 	########################################################
