libceph: add process_one_ticket() helper (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4865,6 +4865,7 @@
 	patches.ceph/0057-libceph-take-map_sem-for-read-in-handle_reply
 	# CVE-2014-6416
 	patches.ceph/libceph-gracefully-handle-large-reply-messages-from-the-mon
+	patches.ceph/libceph-add-process_one_ticket-helper
 
 	########################################################
 	# Patches required for Lustre 2.1 support	       #
