crush: CHOOSE_LEAF -> CHOOSELEAF throughout (FATE#318328 bsc#917884).

--- a/series.conf
+++ b/series.conf
@@ -4841,6 +4841,7 @@
 	patches.ceph/0032-crush-new-set_choose_leaf_tries-command
 	patches.ceph/0033-crush-apply-chooseleaf_tries-to-firstn-mode-too
 	patches.ceph/0034-crush-add-set_choose_tries-rule-step
+	patches.ceph/0035-crush-choose_leaf-chooseleaf-throughout
 	# CVE-2014-6416
 
 	########################################################
