enic: do tx cleanup in napi poll (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15017,6 +15017,7 @@
 	patches.drivers/enic-0030-enic-alloc-free-rx_cpu_rmap.patch
 	patches.drivers/enic-0031-enic-Add-Accelerated-RFS-support.patch
 	patches.drivers/enic-0032-enic-fix-lockdep-around-devcmd_lock.patch
+	patches.drivers/enic-0033-enic-do-tx-cleanup-in-napi-poll.patch
 
 	########################################################
 	# Wireless Networking
