drivers/net: enic: Add an interface for USNIC to interact with firmware (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14990,6 +14990,7 @@
 	patches.drivers/enic-0006-drivers-net-enic-release-rtnl_lock-on-error-path.patch
 	patches.drivers/enic-0007-drivers-net-enic-Move-ethtool-code-to-a-separate-fil.patch
 	patches.drivers/enic-0008-drivers-net-enic-Adding-support-for-Cisco-Low-Latenc.patch
+	patches.drivers/enic-0009-drivers-net-enic-Add-an-interface-for-USNIC-to-inter.patch
 
 	########################################################
 	# Wireless Networking
