enic: Call dev_kfree_skb_any instead of dev_kfree_skb (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15002,6 +15002,7 @@
 	patches.drivers/enic-0018-net-enic-slight-optimization-of-addr-compare.patch
 	patches.drivers/enic-0019-enic-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 	patches.drivers/enic-0020-enic-Don-t-receive-packets-when-the-napi-budget-0.patch
+	patches.drivers/enic-0021-enic-Call-dev_kfree_skb_any-instead-of-dev_kfree_skb.patch
 
 	########################################################
 	# Wireless Networking
