enic: Make dummy rfs functions inline to fix !CONFIG_RFS_ACCEL build (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15019,6 +15019,7 @@
 	patches.drivers/enic-0032-enic-fix-lockdep-around-devcmd_lock.patch
 	patches.drivers/enic-0033-enic-do-tx-cleanup-in-napi-poll.patch
 	patches.drivers/enic-0034-enic-Kill-unused-variable-in-enic_rfs_flw_tbl_init.patch
+	patches.drivers/enic-0035-enic-Make-dummy-rfs-functions-inline-to-fix-CONFIG_R.patch
 
 	########################################################
 	# Wireless Networking
