--- a/series.conf
+++ b/series.conf
@@ -15018,6 +15018,7 @@
 	patches.drivers/enic-0031-enic-Add-Accelerated-RFS-support.patch
 	patches.drivers/enic-0032-enic-fix-lockdep-around-devcmd_lock.patch
 	patches.drivers/enic-0033-enic-do-tx-cleanup-in-napi-poll.patch
+	patches.drivers/enic-0034-enic-Kill-unused-variable-in-enic_rfs_flw_tbl_init.patch
 
 	########################################################
 	# Wireless Networking
