--- a/series.conf
+++ b/series.conf
@@ -15023,6 +15023,7 @@
 	patches.drivers/enic-0036-enic-fix-return-values-in-enic_set_coalesce.patch
 	patches.drivers/enic-0037-enic-remove-ifdef-CONFIG_RFS_ACCEL-around-filter-str.patch
 	patches.drivers/enic-0038-enic-Add-ethtool-support-to-show-classifier-filters-.patch
+	patches.drivers/enic-0039-enic-use-pci_zalloc_consistent.patch
 
 	########################################################
 	# Wireless Networking
