enic: use spin_lock(wq_lock) instead of spin_lock_irqsave(wq_lock) (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15032,6 +15032,7 @@
 	patches.drivers/enic-0045-enic-update-desc-properly-in-rx_copybreak.patch
 	patches.fixes/net-introduce-napi_schedule_irqoff.patch
 	patches.drivers/enic-0046-enic-use-napi_schedule_irqoff.patch
+	patches.drivers/enic-0047-enic-use-spin_lock-wq_lock-instead-of-spin_lock_irqs.patch
 
 	########################################################
 	# Wireless Networking
