enic: reconfigure resources for kdump crash kernel (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15043,6 +15043,7 @@
 	patches.drivers/enic-0054-enic-add-stats-for-dma-mapping-error.patch
 	patches.drivers/enic-0055-net-ethernet-cisco-enic-enic_dev-Remove-some-unused-.patch
 	patches.fixes/crash_dump-Make-is_kdump_kernel-accessible-from-modu.patch
+	patches.drivers/enic-0056-enic-reconfigure-resources-for-kdump-crash-kernel.patch
 
 	########################################################
 	# Wireless Networking
