drivers/net: enic: Adding support for Cisco Low Latency NIC (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14989,6 +14989,7 @@
 	patches.drivers/enic-0005-enic-be-less-verbose-about-non-critical-firmware-err.patch
 	patches.drivers/enic-0006-drivers-net-enic-release-rtnl_lock-on-error-path.patch
 	patches.drivers/enic-0007-drivers-net-enic-Move-ethtool-code-to-a-separate-fil.patch
+	patches.drivers/enic-0008-drivers-net-enic-Adding-support-for-Cisco-Low-Latenc.patch
 
 	########################################################
 	# Wireless Networking
