enic: fix return values in enic_set_coalesce (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15020,6 +15020,7 @@
 	patches.drivers/enic-0033-enic-do-tx-cleanup-in-napi-poll.patch
 	patches.drivers/enic-0034-enic-Kill-unused-variable-in-enic_rfs_flw_tbl_init.patch
 	patches.drivers/enic-0035-enic-Make-dummy-rfs-functions-inline-to-fix-CONFIG_R.patch
+	patches.drivers/enic-0036-enic-fix-return-values-in-enic_set_coalesce.patch
 
 	########################################################
 	# Wireless Networking
