driver/net: enic: update enic maintainers and driver (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14996,6 +14996,7 @@
 	patches.drivers/enic-0012-driver-net-enic-record-q_number-and-rss_hash-for-skb.patch
 	patches.drivers/enic-0013-driver-net-enic-Try-DMA-64-first-then-failover-to-DM.patch
 	patches.drivers/enic-0014-driver-net-enic-Exposing-symbols-for-Cisco-s-low-lat.patch
+	patches.drivers/enic-0015-driver-net-enic-update-enic-maintainers-and-driver.patch
 
 	########################################################
 	# Wireless Networking
