net: ethernet: cisco: enic: enic_dev: Remove some unused functions (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15041,6 +15041,7 @@
 	patches.fixes/net-Add-net_ratelimited_function-and-net_-level-_rat.patch
 	patches.drivers/enic-0053-enic-check-dma_mapping_error.patch
 	patches.drivers/enic-0054-enic-add-stats-for-dma-mapping-error.patch
+	patches.drivers/enic-0055-net-ethernet-cisco-enic-enic_dev-Remove-some-unused-.patch
 
 	########################################################
 	# Wireless Networking
