--- a/series.conf
+++ b/series.conf
@@ -14985,6 +14985,7 @@
 	patches.drivers/enic-0001-net-Remove-bogus-dependencies-on-INET.patch
 	patches.drivers/enic-0002-enic-remove-__dev-attributes.patch
 	patches.drivers/enic-0003-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
+	patches.drivers/enic-0004-enic-change-sprintf-to-snprintf.patch
 
 	########################################################
 	# Wireless Networking
