net: Remove bogus dependencies on INET (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14981,6 +14981,9 @@
 	patches.drivers/ixgbevf-0068-ixgbevf-Resolve-missing-field-initializers-warnings.patch
 	patches.drivers/ixgbevf-0069-ixgbevf-remove-useless-bd_number-from-struct-ixgbevf.patch
 
+	# enic SP4 update (bsc#911105 FATE#317501)
+	patches.drivers/enic-0001-net-Remove-bogus-dependencies-on-INET.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
