PCI: Remove DEFINE_PCI_DEVICE_TABLE macro use (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15024,6 +15024,7 @@
 	patches.drivers/enic-0037-enic-remove-ifdef-CONFIG_RFS_ACCEL-around-filter-str.patch
 	patches.drivers/enic-0038-enic-Add-ethtool-support-to-show-classifier-filters-.patch
 	patches.drivers/enic-0039-enic-use-pci_zalloc_consistent.patch
+	patches.drivers/enic-0040-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 
 	########################################################
 	# Wireless Networking
