driver/net: enic: Exposing symbols for Cisco's low latency driver (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14995,6 +14995,7 @@
 	patches.drivers/enic-0011-driver-net-enic-Add-multi-tx-support-for-enic.patch
 	patches.drivers/enic-0012-driver-net-enic-record-q_number-and-rss_hash-for-skb.patch
 	patches.drivers/enic-0013-driver-net-enic-Try-DMA-64-first-then-failover-to-DM.patch
+	patches.drivers/enic-0014-driver-net-enic-Exposing-symbols-for-Cisco-s-low-lat.patch
 
 	########################################################
 	# Wireless Networking
