net: enic: remove unnecessary pci_set_drvdata() (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14997,6 +14997,7 @@
 	patches.drivers/enic-0013-driver-net-enic-Try-DMA-64-first-then-failover-to-DM.patch
 	patches.drivers/enic-0014-driver-net-enic-Exposing-symbols-for-Cisco-s-low-lat.patch
 	patches.drivers/enic-0015-driver-net-enic-update-enic-maintainers-and-driver.patch
+	patches.drivers/enic-0016-net-enic-remove-unnecessary-pci_set_drvdata.patch
 
 	########################################################
 	# Wireless Networking
