--- a/series.conf
+++ b/series.conf
@@ -15010,6 +15010,7 @@
 	patches.fixes/net-introduce-netif_addr_lock_nested-and-call-if-whe.patch
 	patches.fixes/net-add-dev_uc_sync_multiple-and-dev_mc_sync_multipl.patch
 	patches.fixes/net-Add-support-for-device-specific-address-syncing.patch
+	patches.drivers/enic-0026-enic-Update-driver-to-use-__dev_uc-mc_sync-unsync-ca.patch
 
 	########################################################
 	# Wireless Networking
