enic: make vnic_wq_buf doubly linked (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15035,6 +15035,7 @@
 	patches.drivers/enic-0047-enic-use-spin_lock-wq_lock-instead-of-spin_lock_irqs.patch
 	patches.drivers/enic-0048-enic-fix-rx-skb-checksum.patch
 	patches.drivers/enic-0049-enic-free-all-rq-buffs-when-allocation-fails.patch
+	patches.drivers/enic-0050-enic-make-vnic_wq_buf-doubly-linked.patch
 
 	########################################################
 	# Wireless Networking
