enic: fix possible deadlock in enic_stop/ enic_rfs_flw_tbl_free (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15027,6 +15027,7 @@
 	patches.drivers/enic-0040-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/enic-0041-enic-implement-rx_copybreak.patch
 	patches.drivers/enic-0042-drivers-net-Convert-remaining-uses-of-pr_warning-to-.patch
+	patches.drivers/enic-0043-enic-fix-possible-deadlock-in-enic_stop-enic_rfs_flw.patch
 
 	########################################################
 	# Wireless Networking
