enic: use napi_schedule_irqoff() (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15031,6 +15031,7 @@
 	patches.drivers/enic-0044-enic-handle-error-condition-properly-in-enic_rq_indi.patch
 	patches.drivers/enic-0045-enic-update-desc-properly-in-rx_copybreak.patch
 	patches.fixes/net-introduce-napi_schedule_irqoff.patch
+	patches.drivers/enic-0046-enic-use-napi_schedule_irqoff.patch
 
 	########################################################
 	# Wireless Networking
