--- a/series.conf
+++ b/series.conf
@@ -14991,6 +14991,7 @@
 	patches.drivers/enic-0007-drivers-net-enic-Move-ethtool-code-to-a-separate-fil.patch
 	patches.drivers/enic-0008-drivers-net-enic-Adding-support-for-Cisco-Low-Latenc.patch
 	patches.drivers/enic-0009-drivers-net-enic-Add-an-interface-for-USNIC-to-inter.patch
+	patches.drivers/enic-0010-drivers-net-enic-Generate-notification-of-hardware-c.patch
 
 	########################################################
 	# Wireless Networking
