--- a/series.conf
+++ b/series.conf
@@ -15037,6 +15037,7 @@
 	patches.drivers/enic-0049-enic-free-all-rq-buffs-when-allocation-fails.patch
 	patches.drivers/enic-0050-enic-make-vnic_wq_buf-doubly-linked.patch
 	patches.drivers/enic-0051-net-use-DMA_x_DEVICE-and-dma_mapping_error-with-skb_.patch
+	patches.drivers/enic-0052-net-add-skb-frag-size-accessors.patch
 
 	########################################################
 	# Wireless Networking
