enic: Use pci_enable_msix_range() instead of pci_enable_msix() (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15000,6 +15000,7 @@
 	patches.drivers/enic-0016-net-enic-remove-unnecessary-pci_set_drvdata.patch
 	patches.drivers/enic-0017-net-cisco-enic-calls-skb_set_hash.patch
 	patches.drivers/enic-0018-net-enic-slight-optimization-of-addr-compare.patch
+	patches.drivers/enic-0019-enic-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 
 	########################################################
 	# Wireless Networking
