--- a/series.conf
+++ b/series.conf
@@ -15028,6 +15028,7 @@
 	patches.drivers/enic-0041-enic-implement-rx_copybreak.patch
 	patches.drivers/enic-0042-drivers-net-Convert-remaining-uses-of-pr_warning-to-.patch
 	patches.drivers/enic-0043-enic-fix-possible-deadlock-in-enic_stop-enic_rfs_flw.patch
+	patches.drivers/enic-0044-enic-handle-error-condition-properly-in-enic_rq_indi.patch
 
 	########################################################
 	# Wireless Networking
