--- a/series.conf
+++ b/series.conf
@@ -15013,6 +15013,7 @@
 	patches.drivers/enic-0026-enic-Update-driver-to-use-__dev_uc-mc_sync-unsync-ca.patch
 	patches.drivers/enic-0027-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/enic-0028-enic-fix-return-value-in-_vnic_dev_cmd.patch
+	patches.drivers/enic-0029-enic-devcmd-for-adding-IP-5-tuple-hardware-filters.patch
 
 	########################################################
 	# Wireless Networking
