enic: alloc/free rx_cpu_rmap (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15014,6 +15014,7 @@
 	patches.drivers/enic-0027-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/enic-0028-enic-fix-return-value-in-_vnic_dev_cmd.patch
 	patches.drivers/enic-0029-enic-devcmd-for-adding-IP-5-tuple-hardware-filters.patch
+	patches.drivers/enic-0030-enic-alloc-free-rx_cpu_rmap.patch
 
 	########################################################
 	# Wireless Networking
