drivers/net: Convert remaining uses of pr_warning to pr_warn (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15026,6 +15026,7 @@
 	patches.drivers/enic-0039-enic-use-pci_zalloc_consistent.patch
 	patches.drivers/enic-0040-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/enic-0041-enic-implement-rx_copybreak.patch
+	patches.drivers/enic-0042-drivers-net-Convert-remaining-uses-of-pr_warning-to-.patch
 
 	########################################################
 	# Wireless Networking
