enic: Add ethtool support to show classifier filters added by the driver (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15022,6 +15022,7 @@
 	patches.drivers/enic-0035-enic-Make-dummy-rfs-functions-inline-to-fix-CONFIG_R.patch
 	patches.drivers/enic-0036-enic-fix-return-values-in-enic_set_coalesce.patch
 	patches.drivers/enic-0037-enic-remove-ifdef-CONFIG_RFS_ACCEL-around-filter-str.patch
+	patches.drivers/enic-0038-enic-Add-ethtool-support-to-show-classifier-filters-.patch
 
 	########################################################
 	# Wireless Networking
