--- a/series.conf
+++ b/series.conf
@@ -14994,6 +14994,7 @@
 	patches.drivers/enic-0010-drivers-net-enic-Generate-notification-of-hardware-c.patch
 	patches.drivers/enic-0011-driver-net-enic-Add-multi-tx-support-for-enic.patch
 	patches.drivers/enic-0012-driver-net-enic-record-q_number-and-rss_hash-for-skb.patch
+	patches.drivers/enic-0013-driver-net-enic-Try-DMA-64-first-then-failover-to-DM.patch
 
 	########################################################
 	# Wireless Networking
