enic: Don't receive packets when the napi budget == 0 (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15001,6 +15001,7 @@
 	patches.drivers/enic-0017-net-cisco-enic-calls-skb_set_hash.patch
 	patches.drivers/enic-0018-net-enic-slight-optimization-of-addr-compare.patch
 	patches.drivers/enic-0019-enic-Use-pci_enable_msix_range-instead-of-pci_enable.patch
+	patches.drivers/enic-0020-enic-Don-t-receive-packets-when-the-napi-budget-0.patch
 
 	########################################################
 	# Wireless Networking
