enic: fix rx skb checksum (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15033,6 +15033,7 @@
 	patches.fixes/net-introduce-napi_schedule_irqoff.patch
 	patches.drivers/enic-0046-enic-use-napi_schedule_irqoff.patch
 	patches.drivers/enic-0047-enic-use-spin_lock-wq_lock-instead-of-spin_lock_irqs.patch
+	patches.drivers/enic-0048-enic-fix-rx-skb-checksum.patch
 
 	########################################################
 	# Wireless Networking
