drivers/net: enic: Move ethtool code to a separate file (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14988,6 +14988,7 @@
 	patches.drivers/enic-0004-enic-change-sprintf-to-snprintf.patch
 	patches.drivers/enic-0005-enic-be-less-verbose-about-non-critical-firmware-err.patch
 	patches.drivers/enic-0006-drivers-net-enic-release-rtnl_lock-on-error-path.patch
+	patches.drivers/enic-0007-drivers-net-enic-Move-ethtool-code-to-a-separate-fil.patch
 
 	########################################################
 	# Wireless Networking
