net: use DMA_x_DEVICE and dma_mapping_error with skb_frag_dma_map (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15036,6 +15036,7 @@
 	patches.drivers/enic-0048-enic-fix-rx-skb-checksum.patch
 	patches.drivers/enic-0049-enic-free-all-rq-buffs-when-allocation-fails.patch
 	patches.drivers/enic-0050-enic-make-vnic_wq_buf-doubly-linked.patch
+	patches.drivers/enic-0051-net-use-DMA_x_DEVICE-and-dma_mapping_error-with-skb_.patch
 
 	########################################################
 	# Wireless Networking
