enic: check dma_mapping_error (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15039,6 +15039,7 @@
 	patches.drivers/enic-0051-net-use-DMA_x_DEVICE-and-dma_mapping_error-with-skb_.patch
 	patches.drivers/enic-0052-net-add-skb-frag-size-accessors.patch
 	patches.fixes/net-Add-net_ratelimited_function-and-net_-level-_rat.patch
+	patches.drivers/enic-0053-enic-check-dma_mapping_error.patch
 
 	########################################################
 	# Wireless Networking
