--- a/series.conf
+++ b/series.conf
@@ -15038,6 +15038,7 @@
 	patches.drivers/enic-0050-enic-make-vnic_wq_buf-doubly-linked.patch
 	patches.drivers/enic-0051-net-use-DMA_x_DEVICE-and-dma_mapping_error-with-skb_.patch
 	patches.drivers/enic-0052-net-add-skb-frag-size-accessors.patch
+	patches.fixes/net-Add-net_ratelimited_function-and-net_-level-_rat.patch
 
 	########################################################
 	# Wireless Networking
