--- a/series.conf
+++ b/series.conf
@@ -14987,6 +14987,7 @@
 	patches.drivers/enic-0003-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 	patches.drivers/enic-0004-enic-change-sprintf-to-snprintf.patch
 	patches.drivers/enic-0005-enic-be-less-verbose-about-non-critical-firmware-err.patch
+	patches.drivers/enic-0006-drivers-net-enic-release-rtnl_lock-on-error-path.patch
 
 	########################################################
 	# Wireless Networking
