enic: be less verbose about non-critical firmware errors (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -14986,6 +14986,7 @@
 	patches.drivers/enic-0002-enic-remove-__dev-attributes.patch
 	patches.drivers/enic-0003-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 	patches.drivers/enic-0004-enic-change-sprintf-to-snprintf.patch
+	patches.drivers/enic-0005-enic-be-less-verbose-about-non-critical-firmware-err.patch
 
 	########################################################
 	# Wireless Networking
