--- a/series.conf
+++ b/series.conf
@@ -15029,6 +15029,7 @@
 	patches.drivers/enic-0042-drivers-net-Convert-remaining-uses-of-pr_warning-to-.patch
 	patches.drivers/enic-0043-enic-fix-possible-deadlock-in-enic_stop-enic_rfs_flw.patch
 	patches.drivers/enic-0044-enic-handle-error-condition-properly-in-enic_rq_indi.patch
+	patches.drivers/enic-0045-enic-update-desc-properly-in-rx_copybreak.patch
 
 	########################################################
 	# Wireless Networking
