net: Add support for device specific address syncing (bsc#911105 FATE#317501).

--- a/series.conf
+++ b/series.conf
@@ -15009,6 +15009,7 @@
 	patches.drivers/enic-0025-enic-Fix-64-bit-divide-on-32bit-system.patch
 	patches.fixes/net-introduce-netif_addr_lock_nested-and-call-if-whe.patch
 	patches.fixes/net-add-dev_uc_sync_multiple-and-dev_mc_sync_multipl.patch
+	patches.fixes/net-Add-support-for-device-specific-address-syncing.patch
 
 	########################################################
 	# Wireless Networking
